--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8050
 server.servlet.context-path=/albums
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database=MYSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
